tests/snapshots/run_wpt_conformance__litert_lstm_float16_tensors_steps_1_with_options_bias__options_recurrentBias__options_activations___relu____relu____relu___and_explicit_options_returnSequence_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm.https.any.js lstm float16 tensors steps=1 with options.bias, options.recurrentBias, options.activations=['relu', 'relu', 'relu'] and explicit options.returnSequence=false, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Lstm { input: 1, weight: 4, recurrence: 3, steps: 1, hidden_size: 2, options: Some(MLLstmOptions { label: "", bias: Some(0), recurrent_bias: Some(2), peephole_weight: None, initial_hidden_state: None, initial_cell_state: None, return_sequence: false, direction: "", layout: "", activations: Some(["relu", "relu", "relu"]) }), outputs: [5, 6] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmInput: f16[1, 2, 2];
  }

  consts {
    operand_0: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_2: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_3: f16[1, 8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);
    operand_4: f16[1, 8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);
  }

  nodes {
    [lstmOutput1, lstmOutput2] = lstm(lstmInput, operand_4, operand_3, activations=["relu", "relu", "relu"], bias=0, direction="", initialCellState=null, initialHiddenState=null, label="", layout="", peepholeWeight=null, recurrentBias=2, returnSequence=false);
  }

  outputs { lstmOutput1; lstmOutput2; }
}
